- added required image for component - fixed mobile spacing on stats component

--- a/src/scss/components/_C05-statistics.scss
+++ b/src/scss/components/_C05-statistics.scss
@@ -13,6 +13,10 @@
     background: transparent;
     box-shadow: none;
 
+    @media (max-width: $breakpoint-small) {
+      padding: 0;
+    }
+
     p {
       font-size: 20px;
       line-height: 140%;
